fixed overflow

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 .banner {
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 
 /*banner image*/
@@ -109,7 +110,7 @@ h1, h2, p {
   text-align: left;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2%;
+  margin-top: 2px;
   background-color: rgb(127, 202, 252);
   color: black;
   max-width: fit-content;
